[project]
name = "sharp-funnel-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.0",
    "mcp>=1.9.0",
    "psycopg>=3.3.3",
    "typer>=0.25.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
